@@ -12,6 +12,9 @@
 
 ngIRCd CVSHEAD
 
+  - Results of the resolver (hostnames and IDENT names) are discarded after
+    the client is successfully registered with the server.
+  - Better logging while establishing and shutting down connections.
   - The type of service (TOS) of all sockets is set to "interactive" now.
   - Added short command line option "-t" as alternative to "--configtest".
   - Added optional support for "IDENT" lookups on incoming connections. You
@@ -501,4 +504,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.226 2004/02/05 14:27:16 alex Exp $
+$Id: ChangeLog,v 1.227 2004/02/28 02:01:01 alex Exp $
